Update .config/hypr/configs/input.conf Update .config/hypr/configs/keybindings.conf Update .config/hypr/configs/windowrules.conf Update .config/hypr/hypridle.conf Update .config/hypr/hyprland.conf

--- a/private_dot_config/hypr/configs/keybindings.conf
+++ b/private_dot_config/hypr/configs/keybindings.conf
@@ -14,7 +14,7 @@ bind = $mainMod + SHIFT, R, exec, pkill -SIGUSR2 waybar # Reload Waybar
 bind = $mainMod + SHIFT, S, exec, hyprshot -m region # Screenshot Manager
 bind = $mainMod, R, exec, rofi -show drun # Application Launcher
 bind = $mainMod + SHIFT, Q, exec, wlogout # Power Menu
-
+bind = SUPER, V, exec,  $terminal --class clipse -e 'clipse' 
 
 bind = $mainMod, E, exec, dolphin # Launch File Manager
 bind = $mainMod, RETURN, exec, $terminal # Launch Terminal
