--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -11,12 +11,14 @@ source = $HOME/.config/hypr/configs/monitor.conf
 source = $HOME/.config/hypr/configs/windowrules.conf
 
 # Startup Apps & Services
-exec-once = wl-paste --watch cliphist store 
+exec-once = clipse -listen # run listener on startup 
 exec-once = udiskie 
 exec-once = waybar 
 exec-once = blueman-applet 
 exec-once = mako 
 
+exec-once = /usr/bin/gnome-keyring-daemon --start --components=secrets
+exec-once = nm-applet --indicator
 
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprpaper 
