--- a/private_dot_config/hypr/configs/input.conf
+++ b/private_dot_config/hypr/configs/input.conf
@@ -3,7 +3,7 @@
 input {
     kb_layout = us, ru
 
-    kb_options = grp:win_space_toggle
+    kb_options = caps:swapescape,grp:win_space_toggle
 
     follow_mouse = 1
     natural_scroll = false
