--- a/private_dot_config/hypr/configs/windowrules.conf
+++ b/private_dot_config/hypr/configs/windowrules.conf
@@ -40,3 +40,7 @@ windowrule = noblur, class:^()$, title:^()$
 windowrule = opaque, class:^()$, title:^()$
 windowrule = noblur, class:^()$, title:^()$
 windowrule = norounding, class:^()$, title:^()$
+
+# Clipboard
+windowrulev2 = float,class:(clipse) # ensure you have a floating window class set if you want this behavior
+windowrulev2 = size 622 652,class:(clipse) # set the size of the window as necessary
