--- a/private_dot_config/kitty/kitty.conf
+++ b/private_dot_config/kitty/kitty.conf
@@ -1,65 +1,59 @@
-# ---------- Fonts ----------
-font_family      JetBrainsMonoNL Nerd Font
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-font_size        12.5
+# Kitty Configuration
+# by Saifullah Balghari 
+# -----------------------------------------------------
 
-# ---------- Window ----------
-hide_window_decorations yes
-window_padding_width    8
-single_window_padding_width -1
-placement_strategy      center
+# Font
+font_family      JetBrainsMono Nerd Font
+bold_font        JetBrainsMono NF Bold
+italic_font      JetBrainsMono NF Italic
+bold_italic_font JetBrainsMono NF Medium Italic
+font_size 11
+modify_font cell_height 118%
 
-# ---------- Colors / Transparency ----------
-background               #0f1b2e
-foreground               #e6edf7
-background_opacity       0.85
-dynamic_background_opacity yes
-background_tint          0.08
+# Theme
+include ~/.config/kitty/themes/kanagawa.conf
 
-selection_background     #9fb6d9
-selection_foreground     #0f1b2e
+# Window layout
+enabled_layouts *
+window_resize_step_cells 2
+window_resize_step_lines 2
+window_border_width 1pt
+window_margin_width 0
+single_window_margin_width -1
+window_padding_width 6
 
-cursor                   #9fb6d9
-cursor_text_color        #0f1b2e
-url_color                #8fb6e3
-
-# 16-color table (холодная, согласована с обоями/Waybar)
-color0  #101c2e
-color1  #c26d70
-color2  #8fbf8f
-color3  #d2b482
-color4  #7391bd
-color5  #b48ead
-color6  #88c0d0
-color7  #d8dee9
-color8  #3b4b63
-color9  #d78f93
-color10 #a8d3a2
-color11 #e7cfa1
-color12 #9ab2d5
-color13 #d1b4cd
-color14 #a7d5e4
-color15 #eaf0f7
-
-# ---------- Behavior ----------
-scrollback_lines        20000
-confirm_os_window_close 0
-
-# ---------- Tabs ----------
-tab_bar_style hidden
+# Tab bar
+tab_bar_edge bottom
+tab_bar_margin_width 0.0
+tab_bar_margin_height 0.0 0.0
+tab_bar_style powerline
+tab_bar_align left
 tab_bar_min_tabs 2
+tab_switch_strategy previous
+tab_fade 0.25 0.5 0.75 1
+tab_separator " ┇"
+tab_powerline_style slanted
+tab_activity_symbol none
+tab_title_template "{f'{title[:30]}…' if title.rindex(title[-1]) + 1 > 30 else (title.center(6) if (title.rindex(title[-1]) + 1) % 2 == 0 else title.center(5))}"
+active_tab_title_template none
+active_tab_font_style   bold-italic
+inactive_tab_font_style normal
 
-# ---------- Shortcuts ----------
-# reload config
-map ctrl+shift+f5 load_config_file
-# font size
-map ctrl+shift+equal  change_font_size all +2.0
-map ctrl+shift+minus  change_font_size all -2.0
-map ctrl+shift+backspace change_font_size all 0
-# background opacity (работает при dynamic_background_opacity yes)
-map ctrl+shift+a>m set_background_opacity +0.05
-map ctrl+shift+a>l set_background_opacity -0.05
-map ctrl+shift+a>1 set_background_opacity 1
-map ctrl+shift+a>d set_background_opacity default
+# Background
+background_opacity 0.9
+
+# Other
+shell bash
+editor nvim
+allow_remote_control yes
+listen_on unix:@mykitty
+allow_hyperlinks yes
+shell_integration enabled
+confirm_os_window_close 0
+cursor_trail 0
+cursor_trail_decay 0.1 0.2
+cursor_trail_start_threshold 1
+
+# Keybindings
+kitty_mod ctrl
+include ~/.config/kitty/kitty_inputs.conf
