--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -17,6 +17,7 @@ exec-once = waybar
 exec-once = blueman-applet 
 exec-once = mako 
 
+exec-once = dbus-update-activation-environment --all
 exec-once = /usr/bin/gnome-keyring-daemon --start --components=secrets
 exec-once = nm-applet --indicator
 
